crates/rivora-graph/tests/snapshots/golden_tests__golden_ability_generated_receipt_snapshot.snap
---
source: crates/rivora-graph/tests/golden_tests.rs
assertion_line: 127
expression: output
---
{
  "id": "graph-fixture-ability-receipt",
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "nodes": [
    {
      "id": "ability-deploy-validator",
      "kind": "ability",
      "display_name": "deployment-validator",
      "description": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    },
    {
      "id": "receipt-ability-run-001",
      "kind": "receipt",
      "display_name": "ability-run-receipt-001",
      "description": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    }
  ],
  "edges": [
    {
      "id": "edge-ability-generated-receipt",
      "kind": "generated",
      "from": "ability-deploy-validator",
      "to": "receipt-ability-run-001",
      "display_name": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    }
  ],
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "graph": 1
  }
}
