crates/rivora-graph/tests/snapshots/golden_tests__golden_empty_graph_json.snap
---
source: crates/rivora-graph/tests/golden_tests.rs
assertion_line: 11
expression: output
---
{
  "id": "graph-fixture-empty",
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "graph": 1
  },
  "nodes": {},
  "edges": {}
}
