crates/rivora-graph/tests/snapshots/golden_tests__golden_incident_explained_by_receipt_snapshot.snap
---
source: crates/rivora-graph/tests/golden_tests.rs
assertion_line: 116
expression: output
---
{
  "id": "graph-fixture-incident-receipt",
  "metadata": {
    "tags": [],
    "labels": {},
    "organization_id": null
  },
  "nodes": [
    {
      "id": "inc-latency-001",
      "kind": "incident",
      "display_name": "latency-incident-001",
      "description": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    },
    {
      "id": "receipt-explanation-001",
      "kind": "receipt",
      "display_name": "explanation-receipt-001",
      "description": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    },
    {
      "id": "svc-payment",
      "kind": "service",
      "display_name": "payment-service",
      "description": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    }
  ],
  "edges": [
    {
      "id": "edge-receipt-explains-inc",
      "kind": "explains",
      "from": "receipt-explanation-001",
      "to": "inc-latency-001",
      "display_name": null,
      "labels": {},
      "metadata": {
        "labels": {}
      },
      "provenance": {
        "source": "fixture-connector",
        "source_kind": "test",
        "source_version": "0.1.0",
        "observed_at": "2026-06-25T12:00:00Z",
        "receipt_id": null,
        "raw_ref": null,
        "connector_ref": null,
        "inference_ref": null,
        "ability_ref": null
      },
      "confidence": {
        "score": 0.8,
        "level": "high",
        "explanation": "Fixture confidence",
        "contributing_factors": [],
        "limiting_factors": []
      },
      "timestamps": {
        "created_at": "2026-06-25T12:00:00Z",
        "updated_at": null
      },
      "version": {
        "schema": "1.0.0",
        "graph": 1
      }
    }
  ],
  "timestamps": {
    "created_at": "2026-06-25T12:00:00Z",
    "updated_at": null
  },
  "version": {
    "schema": "1.0.0",
    "graph": 1
  }
}
