crates/rivora-graph/tests/snapshots/golden_tests__golden_invalid_dangling_edge_validation_error.snap
---
source: crates/rivora-graph/tests/golden_tests.rs
assertion_line: 138
expression: output
---
invalid value for edge_to: edge edge-dangling references non-existent node: node-does-not-exist
